fix: MA-41-score list not central align

--- a/src/utils/modal.scss
+++ b/src/utils/modal.scss
@@ -13,7 +13,7 @@ $laptop-screen-2: 1201px;
 .modal-box {
   position: fixed;
   background-color: #000;
-  width: 70%;
+  width: 92%;
   height: 550px;
   z-index: 100;
   font-size: large;
@@ -63,7 +63,6 @@ $laptop-screen-2: 1201px;
 
 @media screen and (min-width: $lg-screen-2) and (max-width: $laptop-screen){
   .modal-box {
-    
   }
 }
 
